# neural_network_video_example

./: CMakeLists.txt  README.md
include/: nn.h
src/: layout.c  main.c  simple_example.c  simple_example_ui.c  xor.c
